[package]
name = "audio-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rb = "0.4.0"
cpal = "0.13.4"
hound = "3.4.0"
basedrop = "0.1.2"

eframe = "0.16.0"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"]